--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "start": "node server/app.js"
   },
   "dependencies": {
-    "ws": "^8.18.0",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.5.0",
+    "ws": "^8.18.0"
   }
 }
