--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "start": "node server/app.js"
   },
   "dependencies": {
-<<<<<<< HEAD
     "dotenv": "^16.4.5",
+    "express": "^5.1.0",
+    "socket.io": "^4.8.1",
     "uuid": "^10.0.0",
-    "ws": "^8.18.2"
-=======
-    "dotenv": "^16.5.0",
     "ws": "^8.18.0"
->>>>>>> 5330c34ff4694caac77590f5ad53763c4f07140b
-  }
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
